# HArDCore2D

./: CMakeLists.txt  README.md
Schemes/: CMakeLists.txt
Schemes/HHO-diffusion/: DiffusionEquation2d.cpp  DiffusionEquation2d.hpp  HHO_Diffusion.cpp  HHO_Diffusion.hpp
Schemes/HHO-locvardiff/: HHO_LocVarDiff.cpp  HHO_LocVarDiff.hpp
Schemes/TestCase/: TestCase.cpp  TestCase.hpp  TestCase2d.cpp  TestCase2d.hpp
docs/: DiffusionEquation-09March2019_8hpp_source.html  DiffusionEquation2d_8hpp_source.html  HHO__Diffusion_8hpp_source.html  HHO__LocVarDiff_8hpp_source.html  LocVarDiff2d_8hpp_source.html  MAINPAGE.md  TestCase2d_8hpp_source.html  TestCase_8hpp_source.html  annotated.html  cell2d_8h_source.html  cell2d_8hpp_source.html  cell_8hpp_source.html  classHArDCore2D_1_1Cell.html  classHArDCore2D_1_1Cell2D-members.html  classHArDCore2D_1_1Cell2D.html  classHArDCore2D_1_1Edge-members.html  classHArDCore2D_1_1Edge.html  classHArDCore2D_1_1Edge2D.html  classHArDCore2D_1_1HHO__Diffusion-members.html  classHArDCore2D_1_1HHO__Diffusion.html  classHArDCore2D_1_1HHO__LocVarDiff-members.html  classHArDCore2D_1_1HHO__LocVarDiff.html  classHArDCore2D_1_1HybridCore-members.html  classHArDCore2D_1_1HybridCore.html  classHArDCore2D_1_1LegendreGauss-members.html  classHArDCore2D_1_1LegendreGauss.html  classHArDCore2D_1_1LocVarDiff-members.html  classHArDCore2D_1_1LocVarDiff.html  classHArDCore2D_1_1Mesh-members.html  classHArDCore2D_1_1Mesh.html  classHArDCore2D_1_1Mesh2D.html  classHArDCore2D_1_1Mesh2DBuilder-members.html  classHArDCore2D_1_1Mesh2DBuilder.html  (+116 more)
src/Mesh/: cell.cpp  (+24 more)
(+341 files in other folders)
